--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,14 @@
+body {
+    font-family: "Fira Code", Arial, Helvetica, sans-serif;
+}
+
 body, h1, h2, h3, h4 {
     margin: 0;
+}
+
+button {
+    border: none;
+    font-family: inherit;
+    color: #FFF;
+    font-size: 20px;
 }
